[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/anima/visual-editor/shared/AnimaButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/anima/visual-editor/shared/AnimaNumberEdit.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/anima/visual-editor/icons/CanPlay.svg" type="Texture" id=3]
[ext_resource path="res://addons/anima/visual-editor/shared/AnimaToggleButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/anima/visual-editor/editor/AnimaFrameDelay.gd" type="Script" id=7]
[ext_resource path="res://addons/anima/visual-editor/shared/AnimaColorRect.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/anima/visual-editor/shared/AnimaMenuButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/anima/visual-editor/icons/Tools.svg" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 48.0
content_margin_right = 24.0
content_margin_top = 12.0
content_margin_bottom = 12.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="AnimaFrameDelay" type="VBoxContainer"]
margin_bottom = 119.0
rect_clip_content = true
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 7 )

[node name="Control" type="Control" parent="."]
margin_right = 260.0

[node name="BG" parent="Control" instance=ExtResource( 8 )]
margin_right = 260.0
margin_bottom = 119.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 260.0
margin_bottom = 49.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="ToggleButton" parent="HBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
margin_right = 164.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 116, 24.5 )
size_flags_vertical = 3
custom_styles/normal = SubResource( 1 )
text = "Delay:"
__meta__ = {
"__initial_AnimaNode__anima_1026196471787050537__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1026196471787050537_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1056402680315762695__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1056402680315762695_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_109803321239006958__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_109803321239006958_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1164710052494656006__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1164710052494656006_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1172432457717881836__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1172432457717881836_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1220601623298447021__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1220601623298447021_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_12306626339638588__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_12306626339638588_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1243208455671268555__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1243208455671268555_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1250071303453626953__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1250071303453626953_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1341957785818118652__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1341957785818118652_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1400230915018180176__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1400230915018180176_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1414308794679974609__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1414308794679974609_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1499315795561348633__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1499315795561348633_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1499315795561348633_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_1559048323069540771__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1559048323069540771_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1576996096148994385__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1576996096148994385_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_166565200350604126__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_166565200350604126_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_166565200350604126_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_176350233777164154__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_176350233777164154_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_182479716706684784__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_182479716706684784_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_25251814383807316__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_29394051146191687__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_29394051146191687_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_299396143331480713__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_299396143331480713_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_323625228606728149__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_323625228606728149_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_349292019378698608__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_349292019378698608_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_349292019378698608_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_385854207902823364__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_385854207902823364_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_45382050488086261__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_45382050488086261_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_454360864891194458__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_454360864891194458_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_454360864891194458_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_45812480747103516__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_45812480747103516_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_489041539162971741__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_489041539162971741_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_489041539162971741_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_671673069936997192__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_671673069936997192_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_67208459753343536__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_67208459753343536_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_678982245694211792__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_678982245694211792_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_700715562397729492__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_700715562397729492_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_742588546206223999__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_742588546206223999_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_79387114539008313__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_79387114539008313_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_840222092318510498__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_840222092318510498_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_847502603284283447__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_847502603284283447_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_847502603284283447_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_850985943251460938__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_850985943251460938_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_856636816732041748__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_856636816732041748_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_856636816732041748_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_881551837120315918__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_881551837120315918_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_919919446918478271__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_919919446918478271_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_924718081509536987__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_924718081509536987_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_951881673607589478__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_951881673607589478_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_951881673607589478_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_957953657316389038__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_957953657316389038_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaToggleButton__button_bg": Color( 0.0196078, 0.266667, 0.368627, 1 ),
"__initial_ToggleButton__button_bg": Color( 0.0196078, 0.266667, 0.368627, 1 ),
"__visibility_strategy": 0,
"_editor_description_": "",
"_visibility_strategy_reverted": true
}
style = 1
node_to_toggle = NodePath("../../MarginContainer")

[node name="SkipDelay" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_left = 164.0
margin_right = 212.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 32, 24.5 )
hint_tooltip = "Ignores delay"
toggle_mode = true
icon = ExtResource( 3 )
icon_align = 1
expand_icon = true
style = 3
transparent = true

[node name="OptionsMenu" parent="HBoxContainer" instance=ExtResource( 9 )]
margin_left = 212.0
margin_right = 260.0
margin_bottom = 49.0
rect_min_size = Vector2( 48, 48 )
rect_pivot_offset = Vector2( 24, 24.5 )
icon = ExtResource( 10 )
icon_align = 1
expand_icon = true
__meta__ = {
"__initial_AnimaNode__anima_1089089038415726807__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1089089038415726807_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1109358829504410889__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1109358829504410889_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1109358829504410889_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_1184046554139278564__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1184046554139278564_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1199797368124862305__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1199797368124862305_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1199797368124862305_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_1340607361553487793__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1340607361553487793_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1441945957727123779__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1441945957727123779_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1441945957727123779_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_164700612275147168__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_164700612275147168_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1658482992875293945__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1658482992875293945_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_1663072209510023438__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_1663072209510023438_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_215925900549246643__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_215925900549246643_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_244386363034037598__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_244386363034037598_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_359789769654524719__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_359789769654524719_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_447088250819550293__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_447088250819550293_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_447088250819550293_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_454360864891194458__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_454360864891194458_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_454360864891194458_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_503159164245518066__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_503159164245518066_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_503159164245518066_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_541279795408501465__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_541279795408501465_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_611141024203869141__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_611141024203869141_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_611141024203869141_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_625146128990218994__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_625146128990218994_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_647142782613271851__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_647142782613271851_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_698052055760981323__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_698052055760981323_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_774037851557249634__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_774037851557249634_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_774037851557249634_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_807775977158753784__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_807775977158753784_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_8113687285780011__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_8113687285780011_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_838497898335865356__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_838497898335865356_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_838497898335865356_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_840572761080846802__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_840572761080846802_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_840572761080846802_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_871971128971702881__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_871971128971702881_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_871971128971702881_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_AnimaNode__anima_944680552210345459__button_bg": {
"percentage": 0,
"value": Color( 0.0196078, 0.266667, 0.368627, 1 )
},
"__initial_AnimaNode__anima_944680552210345459_opacity": {
"percentage": 0,
"value": 1.0
},
"__initial_AnimaNode__anima_944680552210345459_scale": {
"percentage": 0,
"value": Vector2( 1, 1 )
},
"__initial_Button__button_bg": Color( 0.0196078, 0.266667, 0.368627, 1 ),
"__initial_MenuButton__button_bg": Color( 0.0196078, 0.266667, 0.368627, 1 ),
"__initial_OptionsMenu__button_bg": Color( 0.0196078, 0.266667, 0.368627, 1 ),
"__visibility_strategy": 0,
"_visibility_strategy_reverted": true
}
style = 3
transparent = true
show_panel_on = 2
_items = [ {
"icon": "res://addons/anima/visual-editor/icons/MoveLeft.svg",
"label": "Move left"
}, {
"icon": "res://addons/anima/visual-editor/icons/MoveRight.svg",
"label": "Move right"
}, "__divider__", {
"icon": "res://addons/anima/visual-editor/icons/Remove.svg",
"label": "Remove frame"
} ]

[node name="AnimaActionsBGColor" parent="." instance=ExtResource( 8 )]
visible = false
margin_top = 49.0
margin_right = 400.0
margin_bottom = 98.0
rect_min_size = Vector2( 400, 49 )
color = Color( 0.484706, 0.48, 0.567059, 1 )
style = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 49.0
margin_right = 260.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 24
custom_constants/margin_top = 24
custom_constants/margin_left = 24
custom_constants/margin_bottom = 24

[node name="DelayContent" type="VBoxContainer" parent="MarginContainer"]
margin_left = 24.0
margin_top = 24.0
margin_right = 236.0
margin_bottom = 46.0
custom_constants/separation = 24

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/DelayContent"]
margin_right = 212.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 106, 11 )
custom_constants/separation = 12
__meta__ = {
"__initial_AnimaNode__anima_1345931492693841553_opacity": {
"percentage": 0,
"value": 0
},
"__initial_AnimaNode__anima_1345931492693841553_y": {
"percentage": 0,
"value": 40.0
},
"__initial_AnimaNode__anima_1380365593796130615_opacity": {
"percentage": 0,
"value": 0
},
"__initial_AnimaNode__anima_1380365593796130615_y": {
"percentage": 0,
"value": 40.0
},
"__initial_AnimaNode__anima_1445006817077705811_opacity": {
"percentage": 0,
"value": 0
},
"__initial_AnimaNode__anima_1445006817077705811_y": {
"percentage": 0,
"value": 40.0
},
"__initial_AnimaNode__anima_1459536241765756836_opacity": {
"percentage": 0,
"value": 0
},
"__initial_AnimaNode__anima_1459536241765756836_y": {
"percentage": 0,
"value": 40.0
},
"__initial_AnimaNode__anima_1476860555372773193_opacity": {
"initial_value": 0,
"percentage": 0,
"value": 0
},
"__initial_AnimaNode__anima_1476860555372773193_y": {
"percentage": 0,
"value": 40.0
},
"__initial_AnimaNode__anima_1529528653323773926_opacity": {
"percentage": 0,
"value": 0
},
"__initial_AnimaNode__anima_1529528653323773926_y": {
"percentage": 0,
"value": 40.0
},
"__initial_AnimaNode__anima_1540833171646905762_opacity": {
"percentage": 0,
"value": 0
},
"__initial_AnimaNode__anima_1540833171646905762_y": {
"percentage": 0,
"value": 40.0
},
"__initial_AnimaNode__anima_19370064643549896_opacity": {
"percentage": 0,
"value": 0
},
"__initial_AnimaNode__anima_19370064643549896_y": {
"percentage": 0,
"value": 40.0
},
"__initial_AnimaNode__anima_201926041547569794_opacity": {
"percentage": 0,
"value": 0
},
"__initial_AnimaNode__anima_201926041547569794_y": {
"percentage": 0,
"value": 40.0
},
"__initial_AnimaNode__anima_296497687125696411_opacity": {
"initial_value": 0,
"percentage": 0,
"value": 0
},
"__initial_AnimaNode__anima_296497687125696411_y": {
"percentage": 0,
"value": 40.0
},
"__initial_AnimaNode__anima_443683543868022217_opacity": {
"initial_value": 0,
"percentage": 0,
"value": 0
},
"__initial_AnimaNode__anima_443683543868022217_y": {
"percentage": 0,
"value": 40.0
},
"__initial_AnimaNode__anima_491888477488641418_opacity": {
"percentage": 0,
"value": 0
},
"__initial_AnimaNode__anima_491888477488641418_y": {
"percentage": 0,
"value": 40.0
},
"__initial_AnimaNode__anima_514557108683021851_opacity": {
"percentage": 0,
"value": 0
},
"__initial_AnimaNode__anima_514557108683021851_y": {
"percentage": 0,
"value": 40.0
},
"__initial_AnimaNode__anima_589790280392102295_opacity": {
"percentage": 0,
"value": 0
},
"__initial_AnimaNode__anima_589790280392102295_y": {
"percentage": 0,
"value": 40.0
},
"__initial_AnimaNode__anima_624865489865307983_opacity": {
"percentage": 0,
"value": 0
},
"__initial_AnimaNode__anima_624865489865307983_y": {
"percentage": 0,
"value": 40.0
},
"__initial_AnimaNode__anima_630452328046039185_opacity": {
"percentage": 0,
"value": 0
},
"__initial_AnimaNode__anima_630452328046039185_y": {
"percentage": 0,
"value": 40.0
},
"__initial_AnimaNode__anima_784429249624291626_opacity": {
"percentage": 0,
"value": 0
},
"__initial_AnimaNode__anima_784429249624291626_y": {
"percentage": 0,
"value": 40.0
},
"__initial_AnimaNode__anima_91055979815001001_opacity": {
"percentage": 0,
"value": 0
},
"__initial_AnimaNode__anima_91055979815001001_y": {
"percentage": 0,
"value": 40.0
},
"__initial_AnimaNode__anima_913643855279831177_opacity": {
"percentage": 0,
"value": 0
},
"__initial_AnimaNode__anima_913643855279831177_y": {
"percentage": 0,
"value": 40.0
},
"__initial_AnimaNode_anima_opacity": {
"percentage": 0,
"value": 0
},
"__initial_AnimaNode_anima_y": {
"percentage": 0,
"value": 40.0
},
"__initial_opacity": {
"initial_value": 0,
"percentage": 0,
"value": 0
},
"__initial_y": {
"percentage": 0,
"value": 40.0
},
"__visibility_strategy": 0,
"_initial_relative_value_y_to": 0.0,
"_visibility_strategy_reverted": true
}

[node name="Label" type="Label" parent="MarginContainer/DelayContent/HBoxContainer"]
margin_top = 4.0
margin_right = 40.0
margin_bottom = 18.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Delay:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DelayValue" parent="MarginContainer/DelayContent/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 52.0
margin_right = 212.0
margin_bottom = 22.0
rect_min_size = Vector2( 160, 0 )
text = "0.0"
placeholder_text = "0.0"

[connection signal="resized" from="." to="." method="_on_AnimaFrameDelay_resized"]
[connection signal="pressed" from="HBoxContainer/ToggleButton" to="." method="_on_ToggleButton_pressed"]
[connection signal="pressed" from="HBoxContainer/SkipDelay" to="." method="_on_SkipDelay_pressed"]
[connection signal="toggled" from="HBoxContainer/SkipDelay" to="." method="_on_SkipDelay_toggled"]
[connection signal="item_selected" from="HBoxContainer/OptionsMenu" to="." method="_on_OptionsMenu_item_selected"]
